Deactivate travis mail notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: rust
 cache: cargo
+notifications:
+  email: false
 script:
   - cargo build --verbose --all
   - cargo test --verbose --all
