--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,3 +13,5 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Run editorconfig checker
+      run: cargo run
