--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     - name: Run editorconfig checker
-      run: cargo run
+      run: cargo run -- --verbose
