--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,19 +16,22 @@ jobs:
           toolchain: stable
           override: true
 
-      - name: Install rustfmt
-        run: rustup component add rustfmt
-
       - name: Run Tests
         uses: actions-rs/cargo@v1
         with:
           command: test
+
+      - name: Install rustfmt
+        run: rustup component add rustfmt
 
       - name: Check Formatting
         uses: actions-rs/cargo@v1
         with:
           command: test
           args: --all -- --check
+
+      - name: Install clippy
+        run: rustup component add clippy
 
       - name: Clippy Linting
         uses: actions-rs/cargo@v1
