--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Check Formatting
         uses: actions-rs/cargo@v1
         with:
-          command: test
+          command: fmt
           args: --all -- --check
 
       - name: Install clippy
