--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,8 +3,8 @@ name: Rust
 on: [push, pull_request]
 
 jobs:
-  build:
-    name: Build, Test and Lint
+  lint:
+    name: Linting and Formatting Checks
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
@@ -15,11 +15,6 @@ jobs:
         with:
           toolchain: stable
           override: true
-
-      - name: Run Tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
 
       - name: Install rustfmt
         run: rustup component add rustfmt
@@ -38,3 +33,24 @@ jobs:
         with:
           command: clippy
           args: -- -D warnings
+
+  test:
+    name: Run Tests
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v1
+
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+      - name: Run Tests
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
