Run checker in the end

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,7 +50,11 @@ jobs:
         with:
           toolchain: stable
           override: true
+
       - name: Run Tests
         uses: actions-rs/cargo@v1
         with:
           command: test
+
+     - name: Run editorconfig checker
+       run: cargo run -- --verbose
