--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -57,4 +57,6 @@ jobs:
           command: test
 
      - name: Run editorconfig checker
-       run: cargo run -- --verbose
+       uses: actions-rs/cargo@v1
+       with:
+         command: test -- --verbose
