--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,13 +50,12 @@ jobs:
         with:
           toolchain: stable
           override: true
-
       - name: Run Tests
         uses: actions-rs/cargo@v1
         with:
           command: test
 
-     - name: Run editorconfig checker
-       uses: actions-rs/cargo@v1
-       with:
-         command: test -- --verbose
+      - name: Run Editorconfig Checker
+        uses: actions-rs/cargo@v1
+        with:
+          command: run
