--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,12 @@ jobs:
       - name: Install rustfmt
         run: rustup component add rustfmt
 
+      - name: Cache build artifacts
+        uses: actions/cache@v1
+        with:
+          path: target
+          key: ${{ runner.os }}-stable-target
+
       - name: Check Formatting
         uses: actions-rs/cargo@v1
         with:
@@ -51,6 +57,13 @@ jobs:
         with:
           toolchain: stable
           override: true
+
+      - name: Cache build artifacts
+        uses: actions/cache@v1
+        with:
+          path: target
+          key: ${{ runner.os }}-stable-target
+
       - name: Run Tests
         uses: actions-rs/cargo@v1
         with:
